--- a/RPS-Multiplayer/assets/css/style.css
+++ b/RPS-Multiplayer/assets/css/style.css
@@ -3,11 +3,6 @@
     margin : 0;
     border : 0;
 }
-/* body{
-    background-image : url('bi-background-cubes.png');
-    background-attachment : fixed;
-    background-size : 100% auto;
-} */
 #main{
     display : block;
     width : 1000px;
@@ -67,8 +62,16 @@
     background-color : rgba(28,255,215,0.4);
     float : left;
     clear : none;
-    height : 100px;
+    height : 50px;
     width : 300px;
+}
+
+#player1status, #player2status{
+    background-color : rgba(191, 28, 255, 0.699);
+    float : left;
+    clear : none;
+    height : 50px;
+    width : 300px;   
 }
 #title{
     background-color : rgba(255,255,255, 0.5);
@@ -101,4 +104,8 @@
 
 #messages{
     word-wrap: break-word;
+}
+
+button {
+    display: block;
 }
